# vim-navigator-rs

./: Cargo.toml  Makefile  README.md  shell.nix
src/: lib.rs
